NEWS for the Gmisc package

Changes for 1.11.0
------------------
* Fix for adjustment in box justification, thanks Carl Suster
* Slightly changed color scheme for boxGrobs

Changes for 1.10.0
------------------
* Added yamlDump for quick object review
* Added pathJoin for joining paths without worrying about trailing '/'
* Added time2spanTxt for printing time span descriptor

Changes for 1.9.1
-----------------
* Fixed new handling of data.frame stringsAsFactors in next R release

Changes for 1.9.0
-----------------
* Added id as a parameter to the Transtion-class
* Fixed bad no. of popViewport() not adequately leaving the transitionclass viewport tree
* Fixed bad viewport naming in Transition-class that was creating a conflict with multiple plots

Changes for 1.8.1
-----------------
* Fixed cran requirement where class(x) != class(y) could be of length > 1

Changes for 1.8
-----------------
* Added digits.nonzero for allowing values with extra digits where values are close to 0
* Changed sprintf to txtRound for many of the descriptors
* Fixed vignette names for CRAN
* Fixed bug in retrieve

Changes for 1.7
---------------
* Expressions are now allowed in boxGrob (Thanks Alan Haynes)
* Added lodash similar functions 'retrieve' and 'has'

Changes for 1.6.4
-----------------
* Removed changed constant for STRICT_R_HEADERS compliance

Changes for 1.6.3
-----------------
* Fixed minor issue related to new CPP error

Changes for 1.6.1
-----------------
* Removed test for CRAN compliance
* Changed abs to fabs in bezierArrowFn's c++ code

Changes for 1.6
-----------------
* Added skip_shadows to Transition-class

Changes for 1.4.3
-----------------
* Fixes non-existing values in different by-groups (issue #24)

Changes for 1.4.2
-----------------
* Added box functions between and coords
* Added more connectGrob options for arrows
* Added default options for connectGrob, boxGrob and boxGrobProp

Changes for 1.4.1
-----------------