@@ -42,6 +42,7 @@ export(has)
 export(insertRowAndKeepAttr)
 export(mergeDesc)
 export(mergeLists)
+export(moveBox)
 export(pathJoin)
 export(retrieve)
 export(time2spanTxt)
