@@ -1,0 +1,5 @@
+library(grid)
+grid.newpage()
+
+box <- boxGrob("A simple box", x = .5, y = .8)
+moveBox(box, x = -.2, space = "relative")
