@@ -1,0 +1,33 @@
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/boxGrobs_move.R
+\name{moveBox}
+\alias{moveBox}
+\title{Move a boxGrob}
+\usage{
+moveBox(element, x = NULL, y = NULL, space = c("absolute", "relative"))
+}
+\arguments{
+\item{element}{A \code{\link{boxGrob}}/\code{\link{boxPropGrob}} object.}
+
+\item{x}{A \code{\link[grid:unit]{unit}} element or a numeric that can be converted to a \code{npc} unit object.}
+
+\item{y}{A \code{\link[grid:unit]{unit}} element or a numeric that can be converted to a \code{npc} unit object.}
+
+\item{space}{We can provide \code{absolute} that confers the box absolute position within the parent
+\code{\link[grid:viewport]{viewport}}. If \code{relative} the movement is related to the current position.}
+}
+\value{
+The element with updated
+}
+\description{
+Moves a \code{\link{boxGrob}}/\code{\link{boxPropGrob}} by modifying it's \code{\link[grid:viewport]{viewport}}.
+This can be useful if you want to create a series of boxes whose position are relative
+to each other and depend on each box's width/height.
+}
+\examples{
+library(grid)
+grid.newpage()
+
+box <- boxGrob("A simple box", x = .5, y = .8)
+moveBox(box, x = -.2, space = "relative")
+}
